--- a/awsRek/winners.properties
+++ b/awsRek/winners.properties
@@ -1,7 +1,24 @@
-adrian_cortes=mehd.jpg
-liam=liam1.jpg
-asas=asda.jpg
-adrian_cortes3=mehd.jpg
-adrian_cortes4=mehd.jpg
-adrian_cortes5=mehd.jpg
-adrian_cortes6=mehd.jpg
+Adrian_cortes=mehd.jpg
+Anil_Chimili=Anil_Chimili.jpg
+Charan_Raj=Charan_Raj.jpg
+Daniel_Olivier=Daniel_Olivier.jpg
+Denise_Dessens=Denise_Dessens.jpg
+Erik_Ramirez=Erik_Ramirez.jpg
+Fabian_Delgado=Fabian_Delgado.jpg
+Jesus_Alviso=Jesus_Alviso.jpg
+Isai_Valdenea=Isai_Valdenea.jpg
+Ivan_Vicario=Ivan_Vicario.jpg
+Karthiga_Balasubramanian=Karthiga_Balasubramanian.jpg
+Leonardo_Velasquez=Leonardo_Velasquez.jpg
+Luis_Alvarez=Luis_Alvarez.jpg
+Mohamed_Swelam=Mohamed_Swelam.jpg
+Mohan_Marappan=Mohan_Marappan.jpg
+Omar_Navarro=Omar_Navarro.jpg
+Sumitha_Subiah=Sumitha_Subiah.jpg
+Vijay_Ranagani=Vijay_Ranagani.jpg
+Vinod_Gajulapalli=Vinod_Gajulapalli.jpg
+David_Quina=David_Quina.jpg
+Ian_Talamas=Ian_Talamas.jpg
+Jaishankar_Jothi=Jaishankar_Jothi.jpg
+Max_Villebardet=Max_Villebardet.jpg
+Omar_Osorio=Omar_Osorio.jpg
